[package]
name = "shoko_external_importer"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.3", features = [
    "without-deprecated",
    "r2d2",
    "sqlite",
] }
diesel_migrations = "2.0.0"
clap = { version = "4.2.2", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
anyhow = { version = "1.0.70", features = ["backtrace"]}
log = "0.4.17"
globmatch = "0.3.0"
simplelog = "0.12.1"
clap-markdown = "0.1.3"
dashmap = "5.4.0"
threadpool = "1.8.1"
crossbeam-channel = "0.5.7"
notify-debouncer-mini = "0.4.1"
sd-notify = "0.4.1"
